--- a/sign_in.html
+++ b/sign_in.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
     <link rel="icon" type="image/png" href="./img/favicon-16x16.png" sizes="16x16" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    
 </head>
 <body>
     <header>
@@ -28,16 +29,17 @@
     <section id="signup">
         <div class="container">
             <form action="" style="max-width:500px;margin:auto">
+                <p id="loginResponse"></p>
                 <h2>Login Form</h2>
                 <div class="input-container">
                     <i class="fa fa-user icon"></i>
-                    <input class="input-field" type="text" placeholder="Username" name="usrnm">
+                    <input id="loginEmail" class="input-field" type="text" placeholder="Email" name="email">
                 </div>
                 <div class="input-container">
                     <i class="fa fa-key icon"></i>
-                    <input class="input-field" type="password" placeholder="Password" name="psw">
+                    <input id="loginPassword" class="input-field" type="password" placeholder="Password" name="psw">
                 </div>
-                <button type="submit" class="btn">Login</button>
+                <button id="loginButton" type="button" class="btn">Login</button>
             </form>
         </div>
     </section>
@@ -45,5 +47,6 @@
     <footer>
         <p>Hello-Books, copyright &COPY; 2018</p>
     </footer>
+    <script src="./js/main.js"></script>
 </body>
 </html>
