Adds the get all books functionality

--- a/admin.html
+++ b/admin.html
@@ -47,29 +47,8 @@
             </aside>
             <article id="about-col">
                 <h1>Books</h1>
-                <button class="button_1" type="button">View All Books</button>
-                <ul id="orders">
-                    <li>
-                        <a href="order_display_page.html"><h3>Book title</h3></a>
-                        <p>Author: John Doe</p>
-                        <p>Status: Pending</p>
-                        <p>Category: General</p>
-                        <p>Id: No.</p>
-                    </li>
-                    <li>
-                        <a href="order_display_page.html"><h3>Book title</h3></a>
-                        <p>Author: John Doe</p>
-                        <p>Status: Pending</p>
-                        <p>Category: General</p>
-                        <p>Id: No.</p>
-                    </li>
-                    <li>
-                        <a href="order_display_page.html"><h3>Book title</h3></a>
-                        <p>Author: John Doe</p>
-                        <p>Status: Pending</p>
-                        <p>Category: General</p>
-                        <p>Id: No.</p>
-                    </li>
+                <button  id="viewBooksButton" class="button_1" type="button">View All Books</button>
+                <ul id="books">
                 </ul>
             </article>
         </div>
